--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <h2>🏏 Support Us!</h2>
             <p>Join our Telegram channel to get updates on live matches and support free cricket streaming!</p>
             <div class="button-group">
-                <a href="https://t.me/+EZsTSzAlsiU3ZTBl" target="_blank" class="btn btn-join">
+                <a href="https://t.me/+LCMBabNnxhM5YmQ1" target="_blank" class="btn btn-join">
                     <span class="telegram-icon">📱</span> JOIN TELEGRAM
                 </a>
                 <button onclick="closeModal()" class="btn btn-already">
@@ -294,7 +294,7 @@
 
         <div class="info-section">
             <h2>Join Our Telegram For Future Matches Free Links</h2>
-            <a href="https://t.me/+EZsTSzAlsiU3ZTBl" target="_blank" class="telegram-btn">
+            <a href="https://t.me/+LCMBabNnxhM5YmQ1" target="_blank" class="telegram-btn">
                 📱 TELEGRAM
             </a>
         </div>
